--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -24,16 +24,11 @@ jobs:
           role-to-assume: arn:aws:iam::592311462240:role/advanced-artefacts-gh-advancedcsg
           aws-region: eu-west-2
 
-      - name: Advanced Artefacts - Setup CLI
-        uses: advancedcsg/actions-setup-advanced-artefacts-cli@v1.2.0
-        with:
-          disable-auto-auth-container-images: true
-
       - name: Setup .Net
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: '6.x'
-          source-url: https://advanced-592311462240.d.codeartifact.eu-west-2.amazonaws.com/nuget/nuget-dev/v3/index.json
+          source-url: https://advanced-592311462240.d.codeartifact.eu-west-2.amazonaws.com/nuget/innovation-dev/v3/index.json
          
       - name: Generate build number
         uses: zyborg/gh-action-buildnum@v1 
@@ -51,6 +46,6 @@ jobs:
         run: find . -name *nupkg
         
       - name: Push to AWS CodeArtifact
-        run: nuget push "**/*.nupkg"
+        run: nuget push "**/*.snupkg"
       
       
